wip: close dialog

--- a/source/Maestro.Wpf/Styles.xaml
+++ b/source/Maestro.Wpf/Styles.xaml
@@ -31,9 +31,9 @@
         <Setter Property="FontSize" Value="{x:Static local:Theme.FontSize}" />
         <Setter Property="FontWeight" Value="{x:Static local:Theme.FontWeight}"/>
 
-        <Setter Property="LineStackingStrategy" Value="BlockLineHeight" />
-        <Setter Property="Height" Value="{Binding Source={x:Static local:Theme.FontSize}, Converter={StaticResource FontSizeToHeightConverter}}" />
-        <Setter Property="LineHeight" Value="{Binding Source={x:Static local:Theme.FontSize}, Converter={StaticResource FontSizeToLineHeightConverter}}" />
+        <!-- <Setter Property="LineStackingStrategy" Value="BlockLineHeight" /> -->
+        <!-- <Setter Property="Height" Value="{Binding Source={x:Static local:Theme.FontSize}, Converter={StaticResource FontSizeToHeightConverter}}" /> -->
+        <!-- <Setter Property="LineHeight" Value="{Binding Source={x:Static local:Theme.FontSize}, Converter={StaticResource FontSizeToLineHeightConverter}}" /> -->
     </Style>
 
     <Style x:Key="GenericTextStyle" TargetType="{x:Type TextBlock}" BasedOn="{StaticResource TextBaseStyle}">
