--- a/source/Maestro.Wpf/Views/MaestroView.xaml
+++ b/source/Maestro.Wpf/Views/MaestroView.xaml
@@ -240,7 +240,7 @@
             Margin="1"
             ClipToBounds="True"
             Background="Transparent"
-            ContextMenuOpening="OnContextMenuOpening"
+            ContextMenuOpening="SuppressContextMenuIfRequired"
             MouseRightButtonDown="OnCanvasRightClick"
             MouseLeftButtonDown="OnCanvasLeftClick">
             <Canvas.ContextMenu>
