--- a/source/Maestro.Wpf/Views/FlightLabelView.xaml
+++ b/source/Maestro.Wpf/Views/FlightLabelView.xaml
@@ -131,13 +131,13 @@
                 <MenuItem Header="Information" Command="{Binding ShowInformationWindowCommand}" />
                 <MenuItem Header="Recompute" Command="{Binding RecomputeCommand}" />
                 <MenuItem Header="Change Runway">
-                    <ItemsControl ItemsSource="{Binding RunwayModeViewModel.Runways}">
+                    <ItemsControl ItemsSource="{Binding AvailableRunways}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
                                 <MenuItem
-                                    Header="{Binding Identifier}"
+                                    Header="{Binding .}"
                                     Command="{Binding Path=DataContext.ChangeRunwayCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
-                                    CommandParameter="{Binding Identifier}" />
+                                    CommandParameter="{Binding .}" />
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
                     </ItemsControl>
