--- a/source/Maestro.Wpf/Views/MaestroView.xaml
+++ b/source/Maestro.Wpf/Views/MaestroView.xaml
@@ -77,7 +77,7 @@
                     TextWrapping="Wrap"
                     HorizontalAlignment="Center"
                     Style="{StaticResource GenericTextStyle}">
-                        FLOW
+                        INOP
                 </TextBlock>
 
                 <controls:BeveledLine Grid.Column="1" Width="{x:Static local:Theme.BeveledLineWidth}" Orientation="Vertical"/>
