--- a/source/Maestro.Wpf/Views/InsertFlightView.xaml
+++ b/source/Maestro.Wpf/Views/InsertFlightView.xaml
@@ -9,8 +9,8 @@
              Background="{x:Static local:Theme.BackgroundColor}"
              d:DataContext="{d:DesignInstance Type=viewModels:InsertFlightViewModel}"
              mc:Ignorable="d"
-             Padding="2"
-             Width="320">
+             Padding="8"
+             MinWidth="320">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -59,7 +59,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" Grid.Column="0">
+        <StackPanel Grid.Row="0" Grid.Column="0" Margin="0,0,4,0">
             <TextBlock>Over shoot</TextBlock>
 
             <ListBox
@@ -67,7 +67,6 @@
                 SelectedItem="{Binding SelectedFlight, Mode=TwoWay}"
                 BorderThickness="0"
                 Background="Transparent"
-                Margin="2"
                 Height="120">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
@@ -115,7 +114,7 @@
             </ListBox>
         </StackPanel>
 
-        <StackPanel Grid.Row="0" Grid.Column="1">
+        <StackPanel Grid.Row="0" Grid.Column="1" Margin="4,0,0,0">
             <TextBlock>Pending</TextBlock>
 
             <ListBox
@@ -123,7 +122,6 @@
                 SelectedItem="{Binding SelectedFlight, Mode=TwoWay}"
                 BorderThickness="0"
                 Background="Transparent"
-                Margin="2"
                 Height="120">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
@@ -208,4 +206,3 @@
 
     </Grid>
 </UserControl>
-
