--- a/source/Maestro.Wpf/Views/DesequencedView.xaml
+++ b/source/Maestro.Wpf/Views/DesequencedView.xaml
@@ -9,7 +9,7 @@
              Background="{x:Static local:Theme.BackgroundColor}"
              d:DataContext="{d:DesignInstance Type=viewModels:DesequencedViewModel}"
              mc:Ignorable="d"
-             MinWidth="200"
+             Width="220"
              Height="240">
     <UserControl.Resources>
         <ResourceDictionary>
