--- a/source/Maestro.Wpf/Views/DialogView.xaml
+++ b/source/Maestro.Wpf/Views/DialogView.xaml
@@ -9,7 +9,8 @@
              d:DataContext="{d:DesignInstance Type=viewModels:DialogViewModel}"
              Background="{x:Static local:Theme.BackgroundColor}"
              MaxWidth="400"
-             Height="Auto"
+             Width="400"
+             Height="120"
              Padding="32,16,32,15">
     <UserControl.Resources>
         <ResourceDictionary>
