--- a/source/Maestro.Wpf/Views/InformationView.xaml
+++ b/source/Maestro.Wpf/Views/InformationView.xaml
@@ -9,8 +9,8 @@
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=messages:FlightMessage}"
         Background="{x:Static local:Theme.BackgroundColor}"
-        Width="Auto"
-        Height="Auto"
+        Width="700"
+        Height="110"
         Padding="8">
     <UserControl.Resources>
         <ResourceDictionary>
