feat(Online): Connectivity enhancements
- Share Information messages between clients
- Improved connection retry behaviour
- Add new config window
- Connection state visible in Maestro view

# Conflicts:
#	source/Maestro.Core.Tests/Model/SequenceTests.cs
#	source/Maestro.Core/Handlers/InsertFlightRequestHandler.cs
#	source/Maestro.Core/Model/Flight.cs
#	source/Maestro.Core/Model/Sequence.cs
#	source/Maestro.Core/ServiceCollectionExtensionMethods.cs
#	source/Maestro.Core/Sessions/Session.cs
#	source/Maestro.Core/Sessions/SessionFactory.cs
#	source/Maestro.Plugin/Plugin.cs

--- a/source/Maestro.Wpf/Views/InformationView.xaml
+++ b/source/Maestro.Wpf/Views/InformationView.xaml
@@ -9,8 +9,8 @@
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=messages:FlightMessage}"
         Background="{x:Static local:Theme.BackgroundColor}"
-        Width="700"
-        Height="110"
+        MinWidth="700"
+        MinHeight="110"
         Padding="8">
     <UserControl.Resources>
         <ResourceDictionary>
