hotfix: TMA config window

--- a/source/Maestro.Wpf/Views/TerminalConfigurationView.xaml
+++ b/source/Maestro.Wpf/Views/TerminalConfigurationView.xaml
@@ -11,6 +11,7 @@
              Background="{x:Static local:Theme.BackgroundColor}"
              d:DataContext="{d:DesignInstance Type=viewModels:TerminalConfigurationViewModel}"
              MinWidth="440"
+             MinHeight="240"
              Padding="8">
     <UserControl.Resources>
         <ResourceDictionary>
