--- a/source/Maestro.Wpf/Views/InformationView.xaml
+++ b/source/Maestro.Wpf/Views/InformationView.xaml
@@ -5,12 +5,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:Maestro.Wpf"
         xmlns:converters="clr-namespace:Maestro.Wpf.Converters"
-        xmlns:messages="clr-namespace:Maestro.Core.Messages;assembly=Maestro.Core"
+        xmlns:controls="clr-namespace:Maestro.Wpf.Controls"
+        xmlns:viewModels="clr-namespace:Maestro.Wpf.ViewModels"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance Type=messages:FlightMessage}"
+        d:DataContext="{d:DesignInstance Type=viewModels:FlightInformationViewModel}"
         Background="{x:Static local:Theme.BackgroundColor}"
-        MinWidth="700"
-        MinHeight="110"
+        MinWidth="640"
+        MinHeight="80"
         Padding="8">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -24,143 +25,115 @@
 
             <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource GenericTextStyle}" />
 
-            <Style TargetType="Border">
-                <Setter Property="BorderBrush" Value="{x:Static local:Theme.GenericTextColor}"/>
-                <Setter Property="BorderThickness" Value="{x:Static local:Theme.BeveledBorderThickness}"/>
-                <Setter Property="Padding" Value="4"/>
-            </Style>
-
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="168"/>
-            <ColumnDefinition Width="Auto"/>
-        </Grid.ColumnDefinitions>
 
-        <Grid Grid.Column="0" Margin="0,0,8,0">
+    <controls:GridWithBorder
+        BorderBrush="{x:Static local:Theme.GenericTextColor}"
+        BorderThickness="1.5">
+
+        <controls:GridWithBorder.ColumnDefinitions>
+            <ColumnDefinition Width="160" />
+            <ColumnDefinition Width="160" />
+            <ColumnDefinition Width="160" />
+            <ColumnDefinition Width="160" />
+        </controls:GridWithBorder.ColumnDefinitions>
+
+        <controls:GridWithBorder.RowDefinitions>
+            <RowDefinition Height="20" />
+            <RowDefinition Height="40" />
+        </controls:GridWithBorder.RowDefinitions>
+
+        <!-- Number to Land -->
+        <TextBlock Grid.Row="0" Grid.Column="0" Text="{Binding NumberInSequence}" TextAlignment="Center" VerticalAlignment="Center" />
+
+        <!-- Flight info -->
+        <Grid Grid.Column="0" Grid.Row="1" Margin="2">
             <Grid.RowDefinitions>
-                <RowDefinition Height="24" />
-                <RowDefinition Height="64" />
+                <RowDefinition/>
+                <RowDefinition/>
             </Grid.RowDefinitions>
-            <Border Grid.Row="0">
-                <TextBlock Text="2" TextAlignment="Center" />
-            </Border>
-            <Border Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
 
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition />
-                    </Grid.RowDefinitions>
-
-                    <TextBlock Grid.Column="0" Grid.Row="0" Text="{Binding Callsign}" />
-                    <TextBlock Grid.Column="1" Grid.Row="0">
-                        <Run Text="{Binding AircraftType, Mode=OneWay}"/>/<Run Text="{Binding WakeCategory, Mode=OneWay, Converter={StaticResource WakeCategoryConverter}}" />
-                    </TextBlock>
-                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{Binding OriginIdentifier}" />
-                    <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding DestinationIdentifier}" />
-                </Grid>
-            </Border>
+            <TextBlock Grid.Column="0" Grid.Row="0" Text="{Binding Callsign}" />
+            <TextBlock Grid.Column="1" Grid.Row="0">
+                <Run Text="{Binding AircraftType, Mode=OneWay}"/>/<Run Text="{Binding WakeCategory, Mode=OneWay, Converter={StaticResource WakeCategoryConverter}}" />
+            </TextBlock>
+            <TextBlock Grid.Column="0" Grid.Row="1" Text="{Binding OriginIdentifier}" />
+            <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding DestinationIdentifier}" />
         </Grid>
 
-        <Grid Grid.Column="1">
+        <!-- Feeder Fix header -->
+        <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding FeederFixIdentifier}" TextAlignment="Center" VerticalAlignment="Center" />
+
+        <!-- Feeder Fix data -->
+        <Grid Grid.Column="1" Grid.Row="1" Margin="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="168" />
-                <ColumnDefinition Width="168" />
-                <ColumnDefinition Width="168" />
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="24" />
-                <RowDefinition Height="64" />
+                <RowDefinition/>
+                <RowDefinition/>
             </Grid.RowDefinitions>
 
-            <Border Grid.Column="0" Grid.Row="0">
-                <TextBlock Text="{Binding FeederFixIdentifier}" TextAlignment="Center" />
-            </Border>
+            <TextBlock Grid.Column="0" Grid.Row="0" Text="ETA-FF"/>
+            <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding InitialFeederFixEstimate, Converter={StaticResource TimeConverter}}"/>
+            <TextBlock Grid.Column="2" Grid.Row="0" Text="{Binding FeederFixEstimate, Converter={StaticResource TimeConverter}}"/>
 
-            <Border Grid.Column="0" Grid.Row="1">
-
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-
-                    <TextBlock Grid.Column="0" Grid.Row="0" Text="ETA-FF"/>
-                    <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding InitialFeederFixEstimate, Converter={StaticResource TimeConverter}}"/>
-                    <TextBlock Grid.Column="2" Grid.Row="0" Text="{Binding FeederFixEstimate, Converter={StaticResource TimeConverter}}"/>
-
-                    <TextBlock Grid.Column="0" Grid.Row="1" Text="STA-FF"/>
-                    <TextBlock Grid.Column="2" Grid.Row="1" Text="{Binding FeederFixTime, Converter={StaticResource TimeConverter}}"/>
-
-                </Grid>
-            </Border>
-
-            <Border Grid.Column="1" Grid.Row="0">
-                <TextBlock TextAlignment="Center">
-                    <Run Text="{Binding AssignedRunwayIdentifier, Mode=OneWay}"/>/<Run Text="{Binding NumberToLandOnRunway, Mode=OneWay}"/>
-                </TextBlock>
-            </Border>
-
-            <Border Grid.Column="1" Grid.Row="1">
-
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-
-                    <TextBlock Grid.Column="0" Grid.Row="0" Text="ETA"/>
-                    <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding InitialLandingEstimate, Converter={StaticResource TimeConverter}}"/>
-                    <TextBlock Grid.Column="2" Grid.Row="0" Text="{Binding LandingEstimate, Converter={StaticResource TimeConverter}}"/>
-
-                    <TextBlock Grid.Column="0" Grid.Row="1" Text="STA"/>
-                    <TextBlock Grid.Column="2" Grid.Row="1" Text="{Binding LandingTime, Converter={StaticResource TimeConverter}}"/>
-
-                </Grid>
-            </Border>
-
-            <Border Grid.Column="2" Grid.Row="0">
-                <TextBlock Text="Delay" TextAlignment="Center" />
-            </Border>
-
-            <Border Grid.Column="2" Grid.Row="1">
-
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-
-                    <TextBlock Grid.Column="0">
-                        <Run Text="{Binding InitialDelay, Mode=OneWay, Converter={StaticResource MinutesConverter}}"/>min
-                    </TextBlock>
-                    <TextBlock Grid.Column="1">
-                        <Run Text="{Binding RemainingDelay, Mode=OneWay, Converter={StaticResource MinutesConverter}}"/>min
-                    </TextBlock>
-
-                </Grid>
-            </Border>
-
+            <TextBlock Grid.Column="0" Grid.Row="1" Text="STA-FF"/>
+            <TextBlock Grid.Column="2" Grid.Row="1" Text="{Binding FeederFixTime, Converter={StaticResource TimeConverter}}"/>
         </Grid>
-    </Grid>
+
+        <!-- Runway header -->
+        <TextBlock Grid.Column="2" Grid.Row="0" TextAlignment="Center" VerticalAlignment="Center" >
+            <Run Text="{Binding AssignedRunwayIdentifier, Mode=OneWay}"/>/<Run Text="{Binding NumberToLandOnRunway, Mode=OneWay}"/>
+        </TextBlock>
+
+        <!-- Runway data -->
+        <Grid Grid.Column="2" Grid.Row="1" Margin="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <TextBlock Grid.Column="0" Grid.Row="0" Text="ETA"/>
+            <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding InitialLandingEstimate, Converter={StaticResource TimeConverter}}"/>
+            <TextBlock Grid.Column="2" Grid.Row="0" Text="{Binding LandingEstimate, Converter={StaticResource TimeConverter}}"/>
+
+            <TextBlock Grid.Column="0" Grid.Row="1" Text="STA"/>
+            <TextBlock Grid.Column="2" Grid.Row="1" Text="{Binding LandingTime, Converter={StaticResource TimeConverter}}"/>
+        </Grid>
+
+        <!-- Delay header -->
+        <TextBlock Grid.Column="3" Grid.Row="0" Text="Delay" TextAlignment="Center" VerticalAlignment="Center" />
+
+        <!-- Delay data -->
+        <Grid Grid.Column="3" Grid.Row="1" Margin="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <TextBlock Grid.Row="0" Grid.Column="0">
+                <Run Text="{Binding InitialDelay, Mode=OneWay, Converter={StaticResource MinutesConverter}}"/>mn
+            </TextBlock>
+            <TextBlock Grid.Row="0" Grid.Column="1">
+                <Run Text="{Binding RemainingDelay, Mode=OneWay, Converter={StaticResource MinutesConverter}}"/>mn
+            </TextBlock>
+        </Grid>
+    </controls:GridWithBorder>
 </UserControl>
