--- a/source/Maestro.Wpf/Views/InformationView.xaml
+++ b/source/Maestro.Wpf/Views/InformationView.xaml
@@ -91,7 +91,7 @@
 
         <!-- Runway header -->
         <TextBlock Grid.Column="2" Grid.Row="0" TextAlignment="Center" VerticalAlignment="Center" >
-            <Run Text="{Binding AssignedRunwayIdentifier, Mode=OneWay}"/>/<Run Text="{Binding NumberToLandOnRunway, Mode=OneWay}"/>
+            <Run Text="{Binding AssignedRunwayIdentifier, Mode=OneWay}"/><Run Text="{Binding ApproachType, Mode=OneWay}"/>/<Run Text="{Binding NumberToLandOnRunway, Mode=OneWay}"/>
         </TextBlock>
 
         <!-- Runway data -->
